examples/errors/invalid_token.dia
version = 0.1.0

// Example: Invalid token error
// This file has an invalid character @ in a position value
diagram {
    box test {
        title: "Test"
        color: blue
    }
}

layout {
    size: (400, 300)
    
    test {
        pos: (50, @50)
        size: (100, 100)
    }
}

